added the initial state of the detailed task page , processing the parameters form the task page , will be reviewd

--- a/Pages/Tasks.razor
+++ b/Pages/Tasks.razor
@@ -3,6 +3,8 @@
 @using Siemens.MP.Data
 @using Siemens.MP.Enums
 @inject Siemens.MP.Data.Repositories.GenericRepository<Siemens.MP.Entities.Task> TaskRepository
+@inject Microsoft.AspNetCore.Components.NavigationManager navigationManager
+
 
 @if (tasks == null)
 {
@@ -25,7 +27,8 @@ else
             {
                 <tr>
                     <th>@task.Id</th>
-                    <td><a href="/DetailedTask" class="card-link"> @task.Name</a></td>
+                    <td><button class="btn btn-primary" @onclick="@(() => Navigate(task.Name,task.Description,task.Deadline,task.State
+                                                                    ))">@task.Name</button></td>
                     <td>@task.Description</td>
                     <td>@task.Deadline</td>
                     <td>@task.State</td>
@@ -36,7 +39,7 @@ else
             <tr>
                 <td scope="row">#</td>
                 <td>
-                     <input placeholder="Task Name" @bind="taskName" />
+                    <input placeholder="Task Name" @bind="taskName" />
                 </td>
                 <td>
                     <input placeholder="Description" @bind="taskDescription" />
@@ -44,7 +47,7 @@ else
                 <td>
                     <input type="date" @bind="deadline" />
                 </td>
-                <td >
+                <td>
                     <select id="selectstatus" @bind="status">
                         <option value="" selected disabled hidden>Status of task</option>
                         <option value="todo">To do</option>
@@ -84,11 +87,17 @@ else
         OnInitializedAsync();
         ResetFieldToDefault();
     }
+        public void Navigate(string name, string desc, DateTime deadline , StateOfTask state)
+    {
+        navigationManager.NavigateTo($"/detailedtask/{name}/{desc}/{state.ToString()}/{deadline.ToString().Replace(@"/",".")}");
+
+    }
 
     private void ResetFieldToDefault()
     {
         taskName = string.Empty;
         taskDescription = string.Empty;
     }
+
 
 }
