Created AbstractEntity with Migrations and added to entities

--- a/Pages/AddArticle.razor
+++ b/Pages/AddArticle.razor
@@ -40,8 +40,7 @@
         Siemens.MP.Entities.Article newArticle = new Siemens.MP.Entities.Article
         {
             Title = Title,
-            Text = Description,
-            ApplicationUser = default
+            Text = Description
         };
         ArticleRepository.Insert(newArticle);
 
