--- a/Pages/DetailedTask.razor
+++ b/Pages/DetailedTask.razor
@@ -1,7 +1,9 @@
 ﻿@page "/detailedtask/{taskId}"
 @inject NavigationManager navigationManager
 @using Microsoft.AspNetCore.WebUtilities
+@using Siemens.MP.Enums
 @inject Siemens.MP.Data.Repositories.GenericRepository<Siemens.MP.Entities.Task> TaskRepository
+@using System.Threading;
 <link rel="stylesheet" href="/css/DetailedTask.css">
 <body>
     <h2><i>@task.Name</i></h2>
@@ -30,11 +32,21 @@
     <div class="container">
         <div class="float-right right-side-container ">
             <ul class="list-group ">
-                <li class="list-group-item py-4 border-style size-of-details">Assignee: <img src="/css/bootstrap/img.jpg" alt="John Doe" class="mr-1 mt-1 rounded-circle" style="width:40px;" /> Baies Darius Incaunnume alfabetuefrumos </li>
-                <li class="list-group-item py-4 border-style size-of-details">Reporter: <img src="/css/bootstrap/img.jpg" alt="John Doe" class="mr-1 mt-1 rounded-circle" style="width:40px;" /> Alban the big nosed one</li>
-                <li class="list-group-item py-4 border-style size-of-details">Status: <span class="badge badge-secondary">@task.State</span></li>
-                <li class="list-group-item py-4 border-style size-of-details">Priority: <span class="badge badge-danger">Urgent</span> </li>
-                <li class="list-group-item py-4 border-style size-of-details">Created Date : </li>
+                <li class="list-group-item py-4 border-style size-of-details">Assignee: <img src="/css/bootstrap/img.jpg" alt="John Doe" class="mr-1 mt-1 rounded-circle" style="width:40px;" /> </li>
+                <li class="list-group-item py-4 border-style size-of-details">Reporter: <img src="/css/bootstrap/img.jpg" alt="John Doe" class="mr-1 mt-1 rounded-circle" style="width:40px;" /> @task.CreatedBy</li>
+                <li class="list-group-item py-4 border-style size-of-details">
+                    Status: <span class="badge badge-secondary">
+                        <select @bind="@task.State">
+                            @foreach (StateOfTask taskState in Enum.GetValues(typeof(StateOfTask)))
+                            {
+                                <option value=@taskState>@taskState.ToString()</option>
+                            }
+                        </select>
+                        <button @onclick="AddTask">Add</button>
+                    </span>
+                </li>
+                <li class="list-group-item py-4 border-style size-of-details">Priority: <span class="badge badge-danger">@task.PriorityState</span> </li>
+                <li class="list-group-item py-4 border-style size-of-details">Created Date: @task.CreatedAt</li>
                 <li class="list-group-item py-4 border-style size-of-details">Due Date: @task.Deadline </li>
                 <li class="list-group-item py-4 border-style size-of-details">Remaining Time:  </li>
             </ul>
@@ -46,6 +58,8 @@
 
     [Parameter]
     public string taskId { get; set; }
+    public StateOfTask status;
+
 
     public int i = 1;
 
@@ -67,5 +81,17 @@
 
     public Siemens.MP.Entities.Task
        task => tasksList.FirstOrDefault(task => task.Id.ToString() == taskId);
+    private void AddTask()
+    {
+        Siemens.MP.Entities.Task newTask = task;
+        {
+            status = task.State;
+
+        }
+
+
+        TaskRepository.Update(newTask);
+    }
+
 }
 
