--- a/Shared/LoginDisplay.razor
+++ b/Shared/LoginDisplay.razor
@@ -14,6 +14,6 @@
 
 </Microsoft.AspNetCore.Components.Authorization.AuthorizeView>
 
-<AuthorizeView Roles="Admin">
+<AuthorizeView Roles="ADMIN">
     <a href="Identity/Account/Register">Register</a>
 </AuthorizeView>
