Added option to add a new project

--- a/Pages/Components/DetailedProjectComponent.razor
+++ b/Pages/Components/DetailedProjectComponent.razor
@@ -19,10 +19,10 @@ else
                 </div>
                 <ul class="list-group list-group-flush">
                     <li class="list-group-item">
-                        <span class="taskinfo badge badge-primary badge-pill list-group-item-danger">Name of the owner</span>
+                        <span class="taskinfo badge badge-primary badge-pill list-group-item-danger">Created by @project.CreatedBy.UserName.Split('@').First()</span>
                     </li>
                     <li class="list-group-item">
-                        <span class="taskinfo badge badge-primary badge-pill list-group-item-success">Marti intr-o joi</span>
+                        <span class="taskinfo badge badge-primary badge-pill list-group-item-success">Deadline: @project.DeadLine</span>
                     </li>
 
                     <li class="list-group-item">
